--- a/src/App.css
+++ b/src/App.css
@@ -1,27 +1,18 @@
 .App {
-}
-
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
-}
-
-.App-header {
-  background-color: #222;
-  height: 150px;
-  padding: 20px;
-  color: white;
+  max-width: 350px;
+  margin: 0 auto;
 }
 
 .App-title {
-  font-size: 1.5em;
+  font-size: 48px;
+  line-height: 48px;
+  font-weight: normal;
 }
 
-.App-intro {
-  font-size: large;
+.App-title.bold {
+  font-weight: bold;
 }
 
-@keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
+.App-title.red {
+  color: red;
 }
